--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,17 @@ apply plugin: 'java'
 
 sourceCompatibility = 1.7
 
+task fatJar(type: Jar) {
+    manifest {
+        attributes 'Implementation-Title': 'Java destination',
+                'Implementation-Version': version,
+                'Main-Class': 'FileDestination'
+    }
+    baseName = project.name + '-all'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}
+
 repositories {
     flatDir {
         dirs '/usr/local/lib/syslog-ng/java-modules/'
@@ -14,5 +25,6 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile name: 'syslog-ng-core'
+    compile name: 'syslog-ng-common'
 
 }
